# caps

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  LICENSE.txt  Makefile  README.md  Vagrantfile  _config.yml  development.yml  docker-compose.dev.yml  docker-compose.yml  index.html  manage.py  preprocess.py  production.yml  pyproject.toml  requirements.dev.txt  requirements.txt  test.ipynb
.devcontainer/: CachedDockerFile  devcontainer-readme.md  devcontainer.json  docker-compose-extend-cached-image.yml
_data/: plans.csv  popular_phrases.yaml
_includes/: site-footer.html  site-header.html
_layouts/: default.html
_sass/: _ceuk-data-table.scss  _ceuk-scorecards.scss  _ceuk-tag-cloud.scss  _icons.scss  _main.scss  _site-content.scss  _site-footer.scss  _site-header.scss  _sparkline.scss  _type.scss  _variables.scss
cape/: admin.py  apps.py  context_processors.py  filters.py  forms.py  import_utils.py  models.py  search_indexes.py  urls.py  utils.py  views.py
caps/: admin.py  apps.py  charts.py  context_processors.py  filters.py  forms.py  import_utils.py  mapit.py  models.py  search_funcs.py  search_indexes.py  tests.py  urls.py  utils.py  views.py
charting/: __init__.py  control.py  theme.py
conf/: config.py-example  config.py.docker  dev_packages  env-example  env.sh-example  httpd.conf-example  nginx.conf  packages  post_deploy_actions.bash  provisioner.sh  schema.xml  social_graphics.py  stack.yml-example
councils/: hertfordshire.html  index.html
league/: apps.py  forms.py  urls.py  views.py
postcode/: index.html
processing/: add_council_data.py
proj/: hosts.py  settings.py  universal.py  urls.py  wsgi.py
scoring/: apps.py  context_processors.py  defaults.py  filters.py  forms.py  middleware.py  mixins.py  models.py  urls.py  views.py
scoring2022/: filters.py  forms.py  mixins.py  models.py  urls.py  views.py
script/: exec  (+27 more)
(+604 files in other folders)
