[tool.poetry]
name = "caps"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pdftotext = "^2.2.2"
psycopg2 = "^2.9.9"
asgiref = "^3.3.2"
beautifulsoup4 = "^4.9.3"
certifi = "^2023.7.22"
chardet = "^3.0.4"
csscompressor = "^0.9.4"
defusedxml = "^0.6.0"
diff-match-patch = "^20200713"
django = "^4.2.11"
django-autoslug = "^1.9.7"
django-bootstrap4 = "^24.1"
django-bootstrap5 = "^23.3"
django-filter = "^2.4.0"
django-haystack = "^3.0"
django-htmlmin = "^0.11.0"
django-import-export = "^2.0.2"
django-markitup = "^4.0.0"
djangorestframework = "^3.13.1"
django-simple-history = "^3.0.0"
django-debug-toolbar = "^3.2.2"
et-xmlfile = "^1.0.1"
future-fstrings = "^1.2.0"
gunicorn = "^22.0.0"
html5lib = "^1.1"
idna = "^2.10"
jdcal = "^1.4.1"
libsass = "^0.22.0"
Markdown = "^3.4.1"
MarkupPy = "^1.14"
numpy = "^1.22.0"
odfpy = "^1.4.1"
olefile = "^0.44"
openpyxl = "^3.0.9"
pandas = "^1.3.5"
Pillow = "^10.2.0"
pysolr = "^3.9.0"
python-dateutil = "^2.8.1"
python-slugify = "^4.0.1"
pytz = "^2020.1"
PyYAML = "^5.4.1"
requests = "^2.31.0"
requests-cache = "^0.5.2"
six = "^1.10.0"
soupsieve = "^2.0.1"
sqlparse = "^0.5.0"
tablib = "^2.0.0"
text-unidecode = "^1.3"
tokenize-rt = "^3.2.0"
urllib3 = "^1.26.18"
webencodings = "^0.5.1"
xlrd = "^1.2.0"
xlwt = "^1.3.0"
cryptography = "^42.0.4"
altair = "^5.1.1"
mysoc-dataset = "^0.2.1"
tqdm = "^4.65.0"
feedparser = "^6.0.11"
django-hosts = "^6.0"
mailchimp-marketing = {git = "https://github.com/mailchimp/mailchimp-marketing-python.git"}
django-libsass = "^0.9"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.3.0"
shot-scraper = "^1.4"

[tool.black]
exclude = '''/(
  migrations
)/'''

[tool.ruff]
exclude = ['migrations']

[tool.isort]
profile = "black"
